--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
   <br>
   <br>
   <section align="center">
-    <a href="https://hindisub.com/bleach-hindi-subbed-11" target="_blank"><img src="image/bleach.png" width="30%"></a>
-    <a href="https://hindisub.com/boruto-hindi-sub-81/" target="_blank"><img src="image/boruto.jpg" width="30%"></a>
+    <a href="https://hindisub.com/bleach-hindi-subbed-11" target="_blank"><img src="image/Bleach.png" width="30%"></a>
+    <a href="https://hindisub.com/boruto-hindi-sub-81/" target="_blank"><img src="image/Boruto.jpg" width="30%"></a>
     <a href="https://hindisub.com/girlfriend-girlfriend-hindi-sub-02/" target="_blank"><img src="image/Gf-Gf.jpg" width="30%"></a>
     <a href="https://hindisub.com/jojos-bizarre-adventure-part-1-hindi-sub-02-26/" target="_blank"><img src="image/Jojo.jpg" width="30%"></a>
     <a href="https://hindisub.com/kaguya-sama-love-is-war-hindi-sub-1601/" target="_blank"><img src="image/Kaguya-sama.png" width="30%"></a>
